# morello

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  bt.txt  environment.yml  plot_ratios.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  traces.txt
.config/: nextest.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: pages.yml  rust.yml  test.yml
benches/: iter_actions.rs  logicalspec_parameters.rs  synth.rs
book/: book.toml  dot_product.drawio  example_01.rs  memory.drawio
book/src/: SUMMARY.md  data_layouts.md  first_full_program.md  intro.md  ir.md  manual_scheduling.md  manual_simple_matmul.md  memory_movement.md  new_kernel.md  new_target.md  retargeting.md  specs.md  synthesis.md
chainexp/: Cargo.toml  plot_results.py
chainexp/src/: main.rs
dbratios/: Cargo.toml
dbratios/src/: main.rs
dbstats/: Cargo.toml
dbstats/src/: main.rs
examples/: BLIS.rs  simple_matmul.rs
frontend/: Cargo.toml
frontend/src/: main.rs
gemm2exp/: Cargo.toml
gemm2exp/src/: main.rs
morello/: Cargo.toml  __init__.py  bcarray.py  cost.pxd  cost.py  dtypes.py  geometry.py  layouts.pxd  layouts.py  op_pprint.py  ops.py  pruning.py  replace.py  search.py  search_cache.py  specs.py  system_config.py  tensor.py  tensor_namer.py  tiling.py  utils.py
morello/benches/: db_puts.rs  impl_reducer.rs  iter_actions.rs  logicalspec_parameters.rs  synth.rs  update_for_tiling.rs
morello/benchmarks/toy_cnn/: halide.py
morello/codegen/: benchmark.py  common.py  ctensors.py  expr_utils.py  gen.py  indexexpr.py  loops.py
morello/examples/: matmul_avx512.rs  matmul_batch_parallel_x86.rs  matmul_chain.rs  matmul_parallel_x86.rs  matmul_x86.rs  matvec_gemma_x86_bf16f32.rs  raskernel.rs  simple_conv_x86.rs  simple_matmul.rs  simple_matmul_x86.rs  softmax.rs  softmax2.rs  softmax_naive.rs
morello/impl/: __init__.py  actions.py  base.py  block.py  compose.py  convhole.py  directconv.py  loops.py  matmuls.py  moves.py  pruning.py  reducesum.py  settings.py  speccast.py  utils.py  zero.py
morello/proptest-regressions/: layout.txt  memorylimits.txt  rtree.txt  scheduling.txt  search.txt  spec.txt  tensorspec.txt  tiling.txt
morello/proptest-regressions/codegen/: mod.txt
morello/proptest-regressions/db/: mod.txt
morello/proptest-regressions/rtree/: mod.txt
morello/proptest-regressions/scheduling/: mod.txt  spatial_split.txt  tiling.txt  to_accum.txt
morello/search/: __init__.py  beam.py  bottomup.py  common.pxd  common.py  dp.py  naive.py  random.py
morello/specs/: __init__.py  base.py  compose.pxd  compose.py  conv.pxd  conv.py  matmul.pxd  matmul.py  moves.py  reducesum.pxd  reducesum.py  tensorspec.pxd  tensorspec.py  zero.py
morello/src/: action_seq.rs  alignment.rs  color.rs  common.rs  cost.rs  datadeps.rs  db.rs  expr.rs  layout.rs  lib.rs  memorylimits.rs  nameenv.rs  ndarray.rs  opaque_symbol.rs  pprint.rs  reconstruct.rs  rtree.rs  scheduling.rs  scheduling_sugar.rs  search.rs  spatial_query.rs  spatial_search.rs  spec.rs  spec_geometry.rs  tensorspec.rs  test_init.rs  tiling.rs  utils.rs  verification.rs  views.rs
morello/src/codegen/: c_utils.rs  clang.rs  cpu.rs  header.rs  mod.rs  namegen.rs  planmem.rs
morello/src/codegen/partials/: x86.c
morello/src/codegen/partials/x86/: cores_clamp.c  cvtbf16_fp32.c  expf_avx2.c  expf_avx512.c  max4.c  max8.c  sum8.c
morello/src/db/: blocks.rs  mod.rs  pagecontents.rs
morello/src/grid/: canon.rs  collections.rs  compose.rs  concat.rs  downscale.rs  general.rs  lens.rs  linear.rs  mod.rs  papply.rs  permute.rs  tablemeta.rs
morello/src/imp/: allocs.rs  blocks.rs  functions.rs  kernels.rs  loops.rs  mod.rs  moves.rs  pipeline.rs  subspecs.rs  timing.rs
morello/src/rtree/: aabb.rs  mod.rs
morello/src/scheduling/: broadcast_first.rs  bufferize.rs  mod.rs  moves.rs  parallel_softmax.rs  select.rs  spatial_split.rs  tiling.rs  to_accum.rs  to_max_and_denom.rs  to_max_and_unscaled.rs  to_softmax_parts.rs
morello/src/search/: algo.rs  bindings.rs  blocksearch.rs  mod.rs  reducer.rs  spectask.rs  utils.rs
morello/src/spatial_action_solver/: fallback.rs  mod.rs
morello/system_config/: __init__.py  base.py  cpu.py  hexagon.py  state.py
precompute/: Cargo.toml
precompute/src/: main.rs
proptest-regressions/: db.txt  layout.txt  reverse_tiling.txt  scheduling.txt  search.txt  spec.txt  tiling.txt  utils.txt
proptest-regressions/db/: mod.txt
python/: .dockerignore  Dockerfile  pyproject.toml
python/morello/: bcarray.py  cost.py  dtypes.pxd  geometry.py  tiling.py
python/scripts/: bench_compare.py  main.py  search_space_characterization.py
python/tests/: cost_test.py  geometry_test.py  ops_test.py  pruning_test.py  strategies.py  utils.py  utils_test.py
scripts/: bench_compare.py  bottomup_ssh.sh  combine_caches.py  dp_beam_comparison.py  main.py  search_algo_comparison.py  search_space_characterization.py  slowdown.py  test_bench_matmul.py
src/: action_seq.rs  alignment.rs  color.rs  common.rs  cost.rs  datadeps.rs  db.rs  expr.rs  geometry.rs  highlight.rs  imp.rs  layout.rs  lib.rs  main.rs  main_batch.rs  memorylimits.rs  nameenv.rs  ndarray.rs  opaque_symbol.rs  pprint.rs  reinterpret.rs  reverse_tiling.rs  scheduling.rs  scheduling_sugar.rs  search.rs  spec.rs  syntax.rs  sysdep.rs  table.rs  target.rs  tensorspec.rs  tiling.rs  utils.rs  verification.rs  views.rs
src/codegen/: arm.rs  c_utils.rs  clang.rs  cpu.rs  header.rs  mod.rs  namegen.rs  x86.rs
src/codegen_partials/: arm.c  benchmarking.c  std.c  x86.c
src/db/: blocks.rs  mod.rs  reduceblocks.rs
src/grid/: canon.rs  general.rs  linear.rs
src/imp/: blocks.rs  kernels.rs  loops.rs  mod.rs  moves.rs  pipeline.rs  subspecs.rs
src/sysdep/: compiler.rs  x86.rs
tests/: bcarray_test.py  conftest.py  cost_test.py  layouts_test.py  ops_test.py  pruning_test.py  replace_test.py  search_cache_test.py  search_test.py  strategies.py  tensor_test.py  tensorspec_test.py  utils.py  utils_test.py
tests/codegen/: gen_test.py
(+36 files in other folders)
