[workspace]
members = [
    "morello",
    "dbstats",
    "frontend",
    "precompute",
    "chainexp"
]
default-members = [
    "morello",
    "frontend"
]
resolver = "2"

[profile.dev]
opt-level = 1 # Synthesis is relatively slow and often part of the dev. cycle, so optimize more than usual.

[profile.release]
debug = 1
lto = "thin"
codegen-units = 8
