[tool.poetry]
name = "morello"
description = ""
version = "0.1.0"
authors = ["Sam Kaufman <emrysk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tabulate = "^0.8.10"
frozendict = "^2.3.4"
pandas = "^1.5.0"
tqdm = "^4.64.1"
hypothesis = "~6.47"
atomicwrites = "^1.4.1"
termcolor = "^2.0.1"
sympy = "^1.11.1"
dask = "^2022.12.1"
distributed = "^2022.12.1"
dask-kubernetes = "^2022.12.0"
bokeh = ">=2.1.1,<3"  # Required for the Dask dashboard.
Cython = "3.0.0a11"
numpy = "^1.23.4"
redis = { extras = ["hiredis"], version = "^4.4.0" }
lz4 = "^4.3.2"
jupyter-server-proxy = "^3.2.2"

[tool.poetry.group.dev.dependencies]
black = { version = "^22.8.0", allow-prereleases = true }
pytest = "^7.1.3"
pytest-xdist = "^2.5.0"
debugpy = "^1.6.3"
typeguard = "^2.13.3"
pytest-asyncio = "^0.20.3"
fakeredis = { version = "^2.4.0", extras = ["lua"] }
pyperf = "^2.5.0"
memray = "^1.5.0"
lupa = "^1.14.1"

[tool.poetry.group.evaluation]
optional = true

[tool.poetry.group.evaluation.dependencies]
google-api-python-client = "^2.62.0"
google-auth = "^2.11.1"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.3"
PyDrive2 = "^1.14.0"
gspread = "^5.5.0"
jax = "~0.3.13"
jaxlib = "~0.3.13"
absl-py = "^1.4.0"  # Required by jax
apache-tvm = "~0.9"
torch = "^1.12.1"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/torch/"
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
skip = ["setup.py"]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
minversion = 6.0
addopts = "--strict-markers --doctest-modules"
testpaths = ["tests"]
markers = [
    "slow: test is time-consuming.",
    "parallelspec: test of is a Spec/Impl with a parallel loop.",
]
