[package]
name = "chainexp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chainexp"
path = "src/main.rs"

[dependencies]
morello = { path = "../morello", features = [ "db-stats", "clap", "verification" ] }
clap = { version = "4.2.5", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.0"
nonzero = "0.2.0"
smallvec = "1.15.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
