[package]
name = "dbratios"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dbratios"
path = "src/main.rs"

[dependencies]
morello = { path = "../morello", features = ["dbratios-unstable-api"] }
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
csv = "1.4"
env_logger = "0.11"
flate2 = "1.1"
itertools = "0.13"
log = "0.4"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2.5"
zstd = "0.13"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
