[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
default-run = "morello"

[features]
default = ["verification"]
verification = ["morello/verification"]

[[bin]]
name = "morello"
path = "src/main.rs"

[dependencies]
morello = { path = "../morello", features = [ "clap" ] }
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "4.2.5", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.0"
nonzero = "0.2.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"
