[package]
name = "morello"
version = "0.1.0"
edition = "2021"

[features]
default = ["verification"]
clap = ["dep:clap"]
verification = ["dep:ndarray", "dep:num-traits", "dep:ndarray-conv"]

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
atty = "0.2"
auto_impl = "1.1.0"
bincode = "1.3.3"
by_address = "1.1.0"
clap = { version = "4.2.5", features = ["derive"], optional = true }
divrem = "1.0.0"
enum_dispatch = "0.3.11"
enum-iterator = "1.4.1"
itertools = "0.11.0"
log = "0.4.0"
ndarray = { version = "0.15.6", optional = true }
ndarray-conv = { version = "0.2.0", optional = true }
num-traits = { version = "0.2.16", optional = true }
prettytable-rs = "^0.10"
rand = "0.8.5"
rayon = "1.7.0"
rle_vec = { git = "https://github.com/samkaufman/rle_vec.git", branch = "morello-main", features = [
    "serialize",
] }
serde = { version = "1.0.160", features = ["derive"] }
smallvec = { version = "1.10.0", features = ["serde"] }
tempfile = "3"
thiserror = "1.0.47"
nonzero = "0.2.0"
rocksdb = { version = "0.22.0", default-features = false, features = [
    "snappy",
] }
wtinylfu = "0.1.0"
parking_lot = "0.12.1"

[dev-dependencies]
iai-callgrind = "0.4.0"
proptest = "1.2.0"
proptest-derive = "0.3.0"

[[bench]]
name = "iter_actions"
harness = false

[[bench]]
name = "logicalspec_parameters"
harness = false

[[bench]]
name = "synth"
harness = false
