[package]
name = "morello"
version = "0.1.0"
edition = "2021"

[features]
default = ["verification"]
clap = ["dep:clap"]
db-stats = ["dep:csv"]
verification = ["dep:ndarray", "dep:num-traits", "dep:ndarray-conv"]

[dependencies]
atty = "0.2"
bincode = "1.3.3"
by_address = "1.1.0"
clap = { version = "4.2.5", features = ["derive"], optional = true }
csv = { version = "1.3.0", optional = true }
divrem = "1.0.0"
enum_dispatch = "0.3.11"
indexmap = "2.2.6"
itertools = "0.13.0"
log = "0.4.0"
ndarray = { version = "0.15.6", optional = true }
ndarray-conv = { version = "0.3.3", optional = true }
num-rational = { version = "0.4.2", features = ["std", "serde"], default-features = false }
num-traits = { version = "0.2.16", optional = true }
prettytable-rs = "^0.10"
rand = "0.8.5"
rayon = "1.7.0"
rle_vec = { git = "https://github.com/samkaufman/rle_vec.git", branch = "morello-main", features = [
    "serialize",
] }
rstar = { version = "0.12", features = ["serde"] }
serde = { version = "1.0.160", features = ["derive"] }
tempfile = "3"
thiserror = "1.0.47"
nonzero = "0.2.0"
wtinylfu = { git = "https://github.com/samkaufman/wtinylfu.git", branch = "master" }
parking_lot = "0.12.1"
prehash = "1.0.0"
half = { version = "2.4.0", features = ["num-traits"] }
strum = { version = "0.26.2", features = ["derive"] }
zstd = "0.13.1"
serde_with = "3.8.3"

[dev-dependencies]
iai-callgrind = "0.12.1"
proptest = "1.2.0"
proptest-derive = "0.5.0"

[[bench]]
name = "impl_reducer"
harness = false

[[bench]]
name = "iter_actions"
harness = false

[[bench]]
name = "logicalspec_parameters"
harness = false

[[bench]]
name = "synth"
harness = false

[[bench]]
name = "update_for_tiling"
harness = false
