[package]
name = "precompute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
morello = { path = "../morello", features = [ "clap" ] }
adler = "1.0.2"
anyhow = { version = "1.0", features = ["backtrace"] }
bincode = "1.3.3"
clap = { version = "4.2.5", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.0"
nonzero = "0.2.0"
rand = "0.8.5"
rayon = "1.7.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"
